Change dark mode class to be an attribute to fully prevent it from being removed without user prompt

--- a/src/sass/dark-mode.scss
+++ b/src/sass/dark-mode.scss
@@ -2,7 +2,7 @@ html.better-slp-dark-mode-transitioning * {
   transition: all 300ms !important;
 }
 
-html.better-slp-dark-mode-container {
+html[better-slp-dark-mode="true"] {
 
   :root {
     --pie-bgcol: rgb(44,44,44) !important;
